--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
             "username": "root",
             "password": "1234"
         }
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
